# case_studies

./: .gitignore  README.md
examples/: sinusoid_and_stationary_noise.ipynb
examples/Noise/Gaps/: README.md  pyproject.toml
examples/Noise/Gaps/Frequency_Domain/: calc_matrices  check_matrices.py  estm_gap_cov.py  gap_funcs.py  gated_noise.py  main.py  noise_curves.py
examples/Noise/Gaps/Frequency_Domain/Data/: check_matrices.py
examples/Noise/Gaps/Frequency_Domain/analytical_matrix_calc/: gated_filtered_noise.py  gated_noise.py
examples/Noise/Gaps/Frequency_Domain/estimated_matrix_calc/: estm_gap_cov.py  estm_gap_filtered_cov.py
examples/Noise/Gaps/Frequency_Domain/filter_experiments/: check_filter.py
examples/Noise/Gaps/Frequency_Domain/utils/: __init__.py  gap_funcs.py
examples/Noise/Gaps/Wavelet_Domain/: wavelet_domain_noise_no_gaps.py  wavelet_domain_noise_with_gaps.py  wavelet_domain_noise_with_gaps_nan.py
examples/Noise/Gaps/Wavelet_Domain/nan_method/: stitch_data_set.py  wavelet_data_utils.py  wavelet_domain_noise_with_gaps_nan.py
examples/Noise/Gaps/Wavelet_Domain/windowing_method/: wavelet_domain_noise_no_gaps.py
examples/Noise/Gaps/src/gap_study_utils/: __init__.py  analysis_data.py  bayesian_functions.py  constants.py  gap_funcs.py  gap_window.py  logger.py  mcmc_runner.py  noise_curves.py  plotting.py  random.py  signal_utils.py  waveform_generator.py  wavelet_data_utils.py
examples/Noise/Gaps/study/Frequency_Domain/: check_matrices.py  estm_gap_cov.py  gated_noise.py
examples/Noise/Gaps/tests/: conftest.py  test_analysis_data_generation.py  test_gap_window_class.py  test_lnl.py  test_mcmc.py  test_nan_gap.py  test_noise_generation.py
(+23 files in other folders)
